--- a/PORTIFOLIO/CSS/responsive.css
+++ b/PORTIFOLIO/CSS/responsive.css
@@ -25,3 +25,37 @@
         margin-top: 32px;
     }
 }
+
+@media (max-width: 700px){
+    header{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        text-align: center;
+        margin-left: 1em;
+        margin-left: 1em;
+    }
+    header h1{
+        font-size: 2em;
+    }
+    header nav {
+        margin-top: 24px;
+    }
+    header nav a {
+        font-size: 1em;
+    }
+    main .main-content .text p{
+        justify-content: center;
+    }
+    main .main-content .techs .cards-container .card {
+        width: 60px;
+        height: 60px;
+    }
+    main .main-content .text h2, .main-content .techs h2 {
+        font-size: 1.8em;
+    }
+    main figure img {
+        width:250px;
+        height: 250px;
+    }
